--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -2,15 +2,15 @@
 @supports (display: grid) {
 
     .grid {
-      display: grid;
-      grid-gap: 1.5vw;
-      min-height: 100vh;
-      padding: 1.5vw;
+        display: grid;
+        grid-gap: 1vw;
+        min-height: 100vh;
+        padding: 2.5vw;
     }
   
     .grid {
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: 50vh 30vh repeat(7, minmax(20vh, 1fr));
+      grid-template-columns: repeat(1);
+     
       grid-template-areas:
         "hero   hero"
         "big1   big1"
@@ -25,8 +25,8 @@
   
     @media screen and (min-width: 750px) {
       .grid {
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(5, 25vh);
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 50vh);
         grid-template-areas:
           "hero   hero   hero   med1   med1"
           "hero   hero   hero   med2   med2"
@@ -69,10 +69,10 @@
   @supports not (display: grid) {
   
     .grid {
-      display: flex;
-      flex-flow: row wrap;
-      min-height: 100vh;
-      padding: 0.75vw;
+         display: grid;
+    grid-gap: 1vw;
+    min-height: 100vh;
+    padding: 1.5vw;
     }
   
     .grid .item {
@@ -119,7 +119,6 @@
   
   }
   
-  /* Styles, just for fun */
 
   *,*:before,*:after {
     box-sizing: border-box;
@@ -178,7 +177,7 @@
 a {
     text-decoration:none;
     color:  #ffffff;
-    font-size: 16px;/* Approximation due to font substitution */
+    font-size: 13px;/* Approximation due to font substitution */
     font-weight: 400;
     line-height: 72px;/* Approximation due to font substitution */
     text-align: right;
@@ -186,12 +185,21 @@ a {
 
 a:hover{
   
-    text-decoration:underline #ff546c;
+    text-decoration:underline #ffaabc;
 }
   header {
       background: #0f105e;
       z-index:0;
+      text-align:center;
       height:100vh;
+      font-family:'Glacial indifference';
+
+      img {
+          width:381px;
+          height:336px;
+          display:block;
+;margin-left:auto;
+      }
   }
 
 nav {
@@ -200,10 +208,10 @@ width:100%;
 }
 
   .cmyk {
-      color:#fff;
-    text-shadow:  0.322rem -0.25rem rgba(#EA5267, .899),
-                 -0.15rem -0.45rem rgba(#101160, 0.25),
-                  0        0.45rem  rgba(yellow, 0.55);  
+      color:#000;
+    text-shadow:  0.322rem -0.25rem rgba(#CBB5EA, .899),
+              
+                  0        0.45rem  rgba(#F1EBBA, 0.55);  
   margin:0;
   padding:0;
     font-size: 6rem;
@@ -218,48 +226,8 @@ width:100%;
   
   
   
-section {
-    background:#0A0B4E;
-    margin:0;
-    padding:0;
-}
-.box__overlay {
-    display:flex;
-    flex-direction:column;
-    background: url('http://chiaracodes.com/pink_banner.png');
-    background-size:cover;
-    background-repeat:no-repeat;
-box-shadow: 25px 43px 100px 0px rgba(25, 26, 100, 0.2);
-
-margin:0 auto;
-z-index:1;
-height:auto;
-transform:translateY(-30%);
-padding:25px 50px;
-
-.container {
-max-width:80%;
-margin:0;
-
-span {
-    color:yellow;
-}
-}
-ul {
-    display:inline-flex;
-}
-h2 {
-    font-size: 36px;
-    font-weight:bold;
-    color:#fff;
-    line-height:.2em;
-}
-p {
-    color:#fff;
-}
 
 
-}
   
   footer {
       background:url('http://chiaracodes.com/blue_banner.png') #0B0F4D;
@@ -273,7 +241,7 @@ p {
   .txt__hightlight {
     color:  #ff546c;
     font-size: 50px;
-    position:relative;
+    
   }
   .txt__hightlight:before{
    
@@ -283,143 +251,45 @@ p {
 
   
   }
-  @supports not (display: grid) {
-    body:before {
-      content: 'Sorry, seems like your browser doesn\'t support display: grid. Below is the flexbox fallback.';
-      display: block;
-      padding: 2rem 2rem 0;
-      color: #ffffff;
-      text-align: center;
-    }
-  }
-  
-  
-  @media screen and (min-width: 1400px) {
-  
-  
-  
-    .header h2 {
-      font-weight: normal;
-      font-size: 1.5rem;
-    }
-  }
-  
-  .box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
-  
-  .diamond {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 2;
-    width: 50px;
-    height: 50px;
-    border-radius: 5px;
-    border: 1px solid #ffffff;
-    box-shadow: 1px 1px 0px rgba(0,0,0,0.2);
-    background-image: linear-gradient(to top left, #ddd 0%, #fff 100%);
-    text-align: center;
-    transform-origin: center;
-    transform: rotateZ(45deg);
-    transition: box-shadow 250ms, transform 250ms;
-  }
-  
-  .diamond span {
-    font-weight: bold;
-    transform: rotateZ(-45deg)
-  }
-  
-  .grid .item:hover .diamond,
-  .grid .item:focus .diamond {
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
-    transform:  rotateZ(45deg) scale(1.2);
-  }
-  
-  .tooltip {
-    position: absolute;
-    z-index: 1;
-    padding: 0.25rem 1rem;
-    border-radius: 5px;
-    background: #29343d;
-    opacity: 0;
-    color: #cedfe9;
-    font-size: 0.875rem;
-    transition: opacity 500ms, transform 500ms;
-  }
-  
-  .tooltip:before {
-    content: '';
-    position: absolute;
-    top: -9px;
-    left: calc(50% - 10px);
-    width: 0;
-    height: 0;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid #29343d;
-  }
-  
-  .grid .item:hover .tooltip,
-  .grid .item:focus .tooltip {
-    opacity: 1;
-    transform: translateY(70px);
-  }
-  
-  .grid .item {
-    position: relative;
-    padding: 1vw;
-    background-position:  left bottom;
-    background-size: 150% 100%;
-    transition: background 500ms, outline 500ms;
-    background-position: top left;
-    outline: transparent;
-  }
-  
-  .grid .item:hover,
-  .grid .item:focus {
-    background-position: top right;
-  }
-  
-  .grid .item:focus {
-    outline: 2px solid #3eabfa;
-  }
-  
-  .grid .item:nth-child(1)  { background-image: linear-gradient(45deg, #cbabfb 0%, #fb7ef6 60%); }
-  .grid .item:nth-child(2)  { background-image: linear-gradient(45deg, #fb7ef6 0%, #cbabfb 60%); }
-  .grid .item:nth-child(3)  { background-image: linear-gradient(45deg, #70c1fb 0%, #79ebe0 60%); }
-  .grid .item:nth-child(4)  { background-image: linear-gradient(45deg, #79ebe0 0%, #70c1fb 60%); }
-  .grid .item:nth-child(5),
-  .grid .item:nth-child(6),
-  .grid .item:nth-child(7),
-  .grid .item:nth-child(8),
-  .grid .item:nth-child(9),
-  .grid .item:nth-child(10),
-  .grid .item:nth-child(11),
-  .grid .item:nth-child(12),
-  .grid .item:nth-child(13),
-  .grid .item:nth-child(14) { background-image: linear-gradient(45deg, #feeeab 0%, #fb7eb3 60%); }
 
   .inner__wrapper{
     margin:0 auto;
    padding-top:5em;
-   position:relative;
+ 
+  a {
+      border:1px solid #ffb09f;
+      border-radius: 44px 44px
+;display:inline-block
+;width:150px;
+padding:10px;
+text-align:center;
+  }
   
       }
 
     header {
-        ul li {border-bottom:2px solid #ff546c;
+
+        h1 {
+            color:#000;
+            text-align:center;
+            font-weight:100;
+            font-size:78px;
+            line-height:1.2;
             padding:0;
-         
+            margin:0;
+        }
+        background:#fff;
+        ul li {
+            padding:0;
+         font-size:13px;
             line-height:0;
 
             a {
                 line-height:1.2em;
+                
             }
+            
+              
         }
     }
 
@@ -429,30 +299,259 @@ p {
         padding:25px 50px;
 
     }
-    .zigzag {
-        stroke-dasharray: 1200;
-        stroke-dashoffset: -800;
-        animation: dash 2s ease-out forwards;
-        transform: rotate(10deg);
-      
+
+ 
+      a{
+        color: #6E5C34;
+        text-decoration: none;
+        display:block;
+        margin: 20px auto;
+        position: relative;
+        overflow: hidden;
+        padding:0 6px;
+        text-transform: uppercase;
+        transition: color .3s cubic-bezier(0.11, 0.7, 0, 1);
+        
+        font-size: 13px;
+        letter-spacing: .15rem;
+        line-height: 1.8;
+      }
+      .link__hover:after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: #ffaabc;
+        content: "";
+        transform: scale(0);
+        transition: transform .3s cubic-bezier(0.11, 0.7, 0, 1);
       }
       
-      
-      @keyframes dash {
-        to {
-          stroke-dashoffset: 0;
+      .link__hover:hover:after {
+        transform: scale(1);
+      }
+header{   z-index:1;
+}
+      .pastel__box {
+          position:absolute;
+          top:0;
+          right:0;
+          z-index:0;
+      }
+
+      body {
+        font-family:'Glacial indifference';
+      }
+
+      .button {
+        position: relative;
+        appearance: none;
+       
+        padding: 1em;
+        border: none;
+        
+        font-size: 1em;
+        cursor: pointer;
+        outline: none;
+        overflow: hidden;
+        border-radius: 100px;
+        border:none;
+        
+        span {
+            position: relative;
+            pointer-events: none;
         }
-      }
-
+        
+        &::before {
+            --size: 0;
     
-    .container {
-        position:relative;
-
-        svg {
-            position:absolute;
-            right:0;
-          
-            max-width:400px;
-            top:0;
+            content: '';
+            position: absolute;
+            left: var(--x);
+            top: var(--y);
+            width: var(--size);
+            height: var(--size);
+            background: #B993D6;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to bottom, #8CA6DB, #B993D6);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to bottom, #8CA6DB, #B993D6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            
+            transform: translate(-50%, -50%);
+            transition: width .2s ease, height .2s ease;
+        }
+        
+        &:hover::before {
+            --size: 400px;
         }
     }
+
+    ///main styling occurs here
+
+    .main {
+        background:#f4f5f8;
+    }
+
+    .box__overlay {
+        display:inline-flex;
+        flex-direction:row;
+       color:#000;
+      background: #f4f5f8;
+    box-shadow: 25px 43px 100px 0px rgba(25, 26, 100, 0.2);
+    
+    margin:0 auto;
+    z-index:1;
+    height:auto;
+    transform:translateY(-30%);
+   padding:20px 25px;
+    
+    .container {
+    max-width:80%;
+    margin:0;
+    
+    span {
+        color:yellow;
+    }
+    }
+    ul {
+        display:inline-flex;
+    }
+    h2 {
+        font-size: 36px;
+        font-weight:bold;
+        color:#000;
+        line-height:.2em;
+    }
+    p {
+        color:#000;
+    }
+    
+    
+    }
+
+    .copy__left {
+        width:50%;
+        padding:25px;
+span {
+    color:#3ed2a7;
+}
+        img {
+            border-radius:50%;
+            width:186px;
+            height:229px;
+            display:block;
+            margin-left:auto;
+            
+            
+        }
+    }
+    .box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+       
+   span {
+    margin-bottom:3em;
+    font-size:2em;
+   }
+        
+      }
+      @supports not (display: grid) {
+        body:before {
+          content: 'Sorry, seems like your browser doesn\'t support display: grid. Below is the flexbox fallback.';
+          display: block;
+          padding: 2rem 2rem 0;
+          color: #ffffff;
+          text-align: center;
+        }
+      }
+      
+      
+      @media screen and (min-width: 1400px) {
+      
+      
+      
+        .header h2 {
+          font-weight: normal;
+          font-size: 1.5rem;
+        }
+      }
+      
+    
+   
+      .grid .item:hover .diamond,
+      .grid .item:focus .diamond {
+        box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+        transform:  rotateZ(45deg) scale(1.2);
+      }
+      
+    //   .tooltip {
+    //     position: absolute;
+    //     z-index: 1;
+    //     padding: 0.25rem 1rem;
+    //     border-radius: 5px;
+    //     background: #29343d;
+    //     opacity: 0;
+    //     color: #cedfe9;
+    //     font-size: 0.875rem;
+    //     transition: opacity 500ms, transform 500ms;
+    //   }
+      
+    //   .tooltip:before {
+    //     content: '';
+    //     position: absolute;
+    //     top: -9px;
+    //     left: calc(50% - 10px);
+    //     width: 0;
+    //     height: 0;
+    //     border-left: 10px solid transparent;
+    //     border-right: 10px solid transparent;
+    //     border-bottom: 10px solid #29343d;
+    //   }
+      
+      .grid .item:hover .tooltip,
+      .grid .item:focus .tooltip {
+        opacity: 1;
+        
+      }
+      
+      .grid .item {
+        position: relative;
+        padding: 1vw;
+        background-position:  left bottom;
+        
+        
+        background-position: top left;
+        outline: transparent;
+      }
+      
+      .grid .item:hover,
+      .grid .item:focus {
+        background-position: top right;
+      }
+      
+      .grid .item:focus {
+        outline: 2px solid #3eabfa;
+      }
+      
+      .grid .item:nth-child(1)  { 
+          background:url('http://chiaracodes.com/placeit1.png'); 
+          background-size:auto 90%;
+          background-repeat:no-repeat;
+          
+    }
+      .grid .item:nth-child(2)  { background-image: linear-gradient(45deg, #fb7ef6 0%, #cbabfb 60%); }
+    //   .grid .item:nth-child(3)  { background-image: linear-gradient(45deg, #70c1fb 0%, #79ebe0 60%); }
+    //   .grid .item:nth-child(4)  { background-image: linear-gradient(45deg, #79ebe0 0%, #70c1fb 60%); }
+    //   .grid .item:nth-child(5),
+    //   .grid .item:nth-child(6),
+    //   .grid .item:nth-child(7),
+    //   .grid .item:nth-child(8),
+    //   .grid .item:nth-child(9),
+    //   .grid .item:nth-child(10),
+    //   .grid .item:nth-child(11),
+    //   .grid .item:nth-child(12),
+    //   .grid .item:nth-child(13),
+    //   .grid .item:nth-child(14) { background-image: linear-gradient(45deg, #feeeab 0%, #fb7eb3 60%); }
+    
